<resources>
    <string name="app_name">BoosterApp</string>
    <string name="txtMenu1">RM</string>
    <string name="txtMenu2">Training</string>
    <string name="txtMenu3">Options</string>


    <string name="Tips1">
        Approximate a reasonable weight that you can comfortably lift
        </string>
    <string name="Tips2">

        Weight gain and repetition execution
        </string>
    <string name="Tips3">
        Repeat step 2 until you can\'t execute the movement well
        </string>
    <string name="Tips4">
        Add my RM in Booster app \n</string>


    <string name="Register">Register</string>
    <string name="NewUser">New user?</string>
    <string name="pass">Password</string>
    <string name="NewUserRegister">Create new user</string>
    <string name="Create">Create New User</string>
    <string name="WelcomeMsn">Welcome to Booster APP\r\nThe first time ----\r\nThe Second.---
    </string>

    <string name="name">Name</string>
    <string name="Birthday">Birthday</string>
    <string name="Age">Age</string>

    <string name="makeOptions">Create new training</string>
    <string name="aboutOptions">About</string>
    <string name="userOptions">User options</string>

    <string name="exerciseName">Rep Max</string>
    <string name="exerciseName1">Snatch</string>
    <string name="exerciseName2">Clean &amp; Jerk</string>
    <string name="exerciseName3">Squat</string>
    <string name="firstWeek">Week 1</string>
    <string name="secondWeek">Week 2</string>
    <string name="thirdWeek">Week 3</string>
    <string name="fourthWeek">Week 4</string>
    <string name="title_activity_main">main</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="addNewRM">Add new RM</string>
    <string name="note">Note</string>

    <string name="force">Force</string>
    <string name="tecnical">Tecnical</string>
    <string name="mode">Mode</string>
    <string name="selecctionWeek"> Week of training</string>
    <string name="calculate">c\na\nl\nc\nu\nl\na\nt\ne</string>

    <string name="errorEmail">Wrong email format</string>
    <string name="errorPassword">The password must be between 8 and 16 characters, at least one digit, at least one lowercase, and at least one uppercase.
It can NOT have other symbols.</string>
    <string name="errorCm">Not real height </string>
    <string name="errorKg">Not real weigth </string>
    <string name="errorName">Name not valid </string>
    <string name="errorSurname">Surname not valid </string>
    <string name="surname">Surname</string>

    <string name="men">Men</string>
    <string name="woman">Woman</string>

    <string name="NewUserCreate">New user create</string>
    <string name="NewRmCreate">New RM create</string>

    <string name="week">week</string>
    <string name="selectOne">Select one this</string>
    <string name="save">Save</string>

    <string name="NewWodCreate"> New wod create</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complete">Complete?</string>
    <string name="delete">Delete</string>


    <string-array name="movimiento_principal">
        <item>Snatch</item>
        <item>Hang Snatch</item>
        <item>Clean and Jerk</item>
        <item>Clean Squat Jerk</item>
        <item>Clean +2 Jerk</item>
    </string-array>

    <string-array name="pull_principal1">
        <item>Snatch Pull</item>
        <item>Panda Pull</item>
        <item>Snatch Deadlift</item>
        <item>Snacth Highpull</item>
    </string-array>

    <string-array name="pull_principal2">
        <item>Clean Pull</item>
        <item>Clean Deadlift</item>
    </string-array>

    <string-array name="movimiento_variante1">
        <item>Power Snatch</item>
        <item>Hang Power Snatch</item>
        <item>Hang Squat Snatch</item>
        <item>Slow Snatch</item>
        <item>Pause Snatch</item>
    </string-array>

    <string-array name="movimiento_variante2">
        <item>Power Clean</item>
        <item>Hang Power Clean</item>
        <item>Hang Squat Clean</item>
        <item>Push Press</item>
        <item>Push Jerk</item>
        <item>Split Jerk</item>
        <item>Slow Clean</item>
        <item>Pause Clean</item>
    </string-array>

    <string-array name="sentadillas">
        <item>Back Squat</item>
        <item>Front Squat</item>
        <item>Pause Back Squat</item>
        <item>Pause Front Squat</item>

    </string-array>


</resources>