<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="ui.login.Login"
    android:background="@drawable/initt"
    >

    <ImageView
        android:id="@+id/ivLogoLogin"
        android:layout_width="230dp"
        android:layout_height="230dp"
       android:src="@drawable/logoinit"
        android:layout_marginBottom="200dp"
        />


    <EditText

        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#81FFFFFF"
        android:hint="Email"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#81FFFFFF"
        android:hint="@string/pass"
        android:minHeight="48dp"
        android:paddingLeft="10dp" />

    <Button

        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewUser"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Register"
            android:textColor="@color/white"
            android:textStyle="bold"


            />


    </LinearLayout>


</LinearLayout>