<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.popup.InfoActivity"
    android:padding="16dp"
    android:background="@color/primary_dark"
    >

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
   >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="WebViewLayout">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="TEST 1RM"
        android:paddingBottom="5dp"
        >
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="12dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. ">
        </TextView>
        <TextView
            android:textSize="12dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tips1">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="12dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2. ">
        </TextView>
        <TextView
            android:textSize="12dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tips2">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="12dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3. ">
        </TextView>
        <TextView
            android:textSize="12dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tips3">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="12dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="4. ">
        </TextView>
        <TextView
            android:textSize="12dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tips4">
        </TextView>

    </LinearLayout>



</LinearLayout>



        <WebView
            android:id="@+id/wvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

    </LinearLayout>
</ScrollView>


</LinearLayout>