<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.menu.rm.FragmentRM">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
           >

            <TextView
                android:id="@+id/exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exerciseName"
                android:textSize="30sp"
                android:layout_weight="1"
                android:gravity="center"
                >
            </TextView>

            <ImageButton

                android:id="@+id/btnInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_info"
                android:background="#00FF4081"
                android:layout_gravity="end"
                app:tint="@color/accent">

            </ImageButton>

        </LinearLayout>


        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addNewRM"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_margin="10dp"
           >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextKg"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"

                android:ems="10"
                android:hint="kg"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/add" />

        </LinearLayout>


        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <TableLayout
            android:id="@+id/tableLayoutRM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="3dip"
            android:background="#0C000000"

            >
            <TableRow
                android:background="#20BB86FC">

                <TextView
                    android:layout_column="0"
                    android:padding="15dp"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_column="1"
                    android:gravity="right"
                    android:padding="15dp"
                    android:text="kg"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_gravity="center_horizontal"/>
                />
                <TextView
                    android:layout_column="2"/>
                />
            </TableRow>

            <TableRow
                android:id="@+id/rowTable">

                <TextView
                    android:layout_column="0"
                    android:padding="15dp"
                    android:text="02/01/2022" />

                <TextView
                    android:layout_column="1"
                    android:gravity="right"
                    android:padding="15dp"
                    android:text="100" />

                <Button
                    android:layout_column="2"
                    android:padding="15dp"
                    android:text="Delete" />

            </TableRow>
        </TableLayout>

    </LinearLayout>



</ScrollView>